--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "jquery": "^3.6.0",
+    "material-table": "^2.0.3",
     "material-ui": "^0.20.2",
+    "material-ui-datatables": "^0.18.2",
+    "mui-datatables": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
