--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@material-ui/core": "^4.12.4",
     "@material/card": "^14.0.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.7",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,8 +16,11 @@
     "material-table": "^2.0.3",
     "material-ui": "^0.20.2",
     "material-ui-datatables": "^0.18.2",
+    "moment": "^2.29.4",
     "mui-datatables": "^4.2.2",
     "react": "^18.2.0",
+    "react-big-calendar": "^0.40.7",
+    "react-calendar": "^3.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
