--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-big-calendar": "^0.40.7",
     "react-calendar": "^3.7.0",
     "react-dom": "^18.2.0",
+    "react-folder-tree": "^5.0.3",
     "react-icons": "^4.4.0",
     "react-scripts": "^5.0.1",
     "react-switch": "^7.0.0",
